# flask

./: README.md  main.py  pyproject.toml  requirements.txt
BackEnd/Functions/: postFunctions.py  userFunctions.py
BackEnd/GlobalInfo/: Keys.py  ResponseMessages.py
