[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = "Python Flask Example"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "3.10.9"
click = "8.1.3"
flask-limiter = "3.1.0"
flask = "2.2.2"
gunicorn = "20.1.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.2"
pandas = "1.5.3"
requests = "2.28.2"
werkzeug = "2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
